<resources xmlns:tools="http://schemas.android.com/tools">

    <!--variable details-->
    <string name="app_name">Dhan laxmi</string>
    <string name="welcome_to_app_matka">Welcome to Dhan Laxmi</string>
    <string name="mail_subject">Mail Subject</string>
    <string name="mail_message">Mail message</string>

    <!--constant details-->
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="conform_password">Enter Confirm Password</string>
    <string name="home">Home</string>
    <string name="contact_us">Contact Us</string>
    <string name="share_with_friends">Share With Friends</string>
    <string name="rate_app">Rate App</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="chart">Chart</string>
    <string name="conform">Confirm</string>
    <string name="profile">Profile</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="digits">Digits</string>
    <string name="enter_digits">Enter Digits</string>
    <string name="proceed">Proceed</string>
    <string name="once_a_bid_is_placed_it_will_not_be_cancelled">Once a bid is placed, it will not be cancelled.</string>
    <string name="cancel">Cancel</string>
    <string name="game_rates">Game Rates</string>
    <string name="how_to_play">How to Play</string>
    <string name="changePassword">changePassword</string>
    <string name="win_history">Win History</string>
    <string name="bid_history">Bid History</string>
    <string name="please_enter_your_new_password">Please enter your new Password</string>
    <string name="new_password_must_be_of_at_least_4_characters_length">New password must be of at least 4 characters length</string>
    <string name="please_enter_conform_password">Please enter conform password</string>
    <string name="password_not_matchin">Password not matching</string>
    <string name="please_enter_mobile_number">Please Enter Mobile Number</string>
    <string name="please_enter_valid_mobile_number">Please Enter Valid Mobile Number</string>
    <string name="verification">verification</string>
    <string name="game">Game</string>
    <string name="reset_pin">Reset Pin</string>
    <string name="please_enter_your_security_pin">Enter Your Security Pin</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="game_name">gameName</string>
    <string name="please_enter_digits">Please enter digits</string>
    <string name="please_enter_valid_digits">Please Enter Valid digits</string>
    <string name="please_enter_points">Please Enter Points</string>
    <string name="please_enter_valid_open_digits">Please Enter Valid Open Digits</string>
    <string name="please_enter_close_pana">Please Enter Close Panna</string>
    <string name="please_enter_valid_close_pana">Please Enter Valid Close Panna</string>
    <string name="please_enter_valid_open_pana">Please Enter Valid Open Panna</string>
    <string name="please_enter_close_digits">Please Enter Close Digits</string>
    <string name="please_enter_valid_close_digits">Please Enter Valid Close Digits</string>
    <string name="bottom_sheet">bottomSheet</string>
    <string name="main_activity">MainActivity</string>
    <string name="youtube_video_not_added_yet">youtube video not added yet</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="please_enter_min_4_digits_password">please Enter Min 4 Digits Password</string>
    <string name="please_check_box"><![CDATA[Please Accept The TERMS & CONDITIONS]]></string>
    <string name="history">History</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="please_enter_your_email">Please Enter Your email</string>
    <string name="please_enter_valid_email">Please Enter Valid Email</string>
    <string name="please_enter_pin">Please Enter Pin</string>
    <string name="please_enter_min_4_digit_pin">Please Enter 4 Digit Pin</string>
    <string name="withdraw_points">Withdraw Points</string>
    <string name="enter_withdraw_points">Enter Points to Withdraw</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="account_number">Account Number</string>
    <string name="enter_your_account_number">Enter Your Account Number</string>
    <string name="conform_account_number">Confirm Account Number</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="enter_ifsc_code">Enter IFSC code</string>
    <string name="branch_address">Branch Address</string>
    <string name="bank_name">Bank Name</string>
    <string name="enter_valid_number">Enter Valid Number</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="response_error">Try Again</string>
    <string name="on_api_failure">An error has occurred</string>
    <string name="success">success</string>
    <string name="user_mobile_number">User Mobile Number</string>
    <string name="verify">Verify</string>
    <string name="you_are_not_connected_to_internet">You are not connected to internet. Please check your internet connection</string>
    <string name="check_your_internet_connection">Please check your internet connection</string>
    <string name="terms_conditions"><u><![CDATA[I agree with TERMS & CONDITIONS]]></u></string>
    <string name="single_digit">Single Digit</string>
    <string name="jodi_digit">Jodi Digit</string>
    <string name="single_pana">Single Panna</string>
    <string name="double_digit">Double Digit</string>
    <string name="triple_digit">Triple Digit</string>
    <string name="half_sangam">Half Sangam</string>
    <string name="full_sangam">Full Sangam</string>
    <string name="open_digit">Open Digit</string>
    <string name="close_pana">Close Panna</string>
    <string name="open_pana">Open Panna</string>
    <string name="close_digit">Close Digit</string>
    <string name="add_funds">Add Funds</string>
    <string name="double_pana">Double Panna</string>
    <string name="triple_pana">Triple Panna</string>
    <string name="choose_date">Date</string>
    <string name="choose_session">Choose Session</string>
    <string name="bids_api_open">{ \"bids\":</string>
    <string name="bids_api_close">}</string>
    <string name="wallet_statement">Wallet Statement</string>
    <string name="transfer_points">Transfer Points</string>
    <string name="enter_points">Enter Points</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="please_enter_your_bank_account_holder_name">Please Enter Your Bank Account Holder Name</string>
    <string name="please_enter_your_bank_account_number">Please Enter Your Bank Account Number</string>
    <string name="enter_valid_bank_account_number">Please Enter Valid Bank Account Number</string>
    <string name="please_enter_your_conform_bank_account_number">Please Enter Your Conform Bank Account Number</string>
    <string name="account_number_not_matching">Account Number Not Matching</string>
    <string name="please_enter_your_bank_ifsc_code">Please Enter Your Bank IFSC Code</string>
    <string name="please_enter_valid_ifsc_code_of_your_bank">Please Enter Valid IFSC Code of Your Bank</string>
    <string name="please_enter_your_bank_name">Please Enter Your Bank Name</string>
    <string name="please_enter_your_branch_address">Please Enter Your Branch Address</string>
    <string name="upi">UPI</string>
    <string name="minimum_points_must_be_greater_then_">Minimum Points must be greater then </string>
    <string name="maximum_points_must_be_less_then_">Maximum Points must be less then </string>
    <string name="please_select_payment_method">Please Select Payment Method</string>
</resources>