<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BankDetailsActivity.BankDetailsActivity">

    <include layout="@layout/custom_appbar3"
        android:id="@+id/appbarLayout"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dataConText"
        android:text="@string/you_are_not_connected_to_internet"
        android:textColor="@color/white"
        android:background="@color/warningRed"
        android:padding="5dp"
        android:visibility="gone"
        android:layout_below="@id/appbarLayout"
        android:elevation="1dp"
        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dataConText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="30dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_holder_name"
                app:boxStrokeColor="@color/resend_text_color"
                app:boxStrokeWidth="1dp"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                android:textColorHint="@color/black"
                app:startIconDrawable="@drawable/baseline_person_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/holderName"
                    android:layout_width="match_parent"
                    android:maxLength="18"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_number"
                android:layout_marginTop="15dp"
                app:boxStrokeColor="@color/resend_text_color"
                app:boxStrokeWidth="1dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                android:textColorHint="@color/black"
                app:startIconDrawable="@drawable/baseline_account_balance_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/accountNumber"
                    android:layout_width="match_parent"
                    android:maxLength="18"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/conform_account_number"
                android:layout_marginTop="15dp"
                app:boxStrokeColor="@color/resend_text_color"
                app:boxStrokeWidth="1dp"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                android:textColorHint="@color/black"
                app:startIconDrawable="@drawable/baseline_account_balance_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/conformAcNumber"
                    android:layout_width="match_parent"
                    android:maxLength="18"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ifsc_code"
                android:layout_marginTop="15dp"
                app:boxStrokeColor="@color/resend_text_color"
                app:boxStrokeWidth="1dp"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                android:textColorHint="@color/black"
                app:startIconDrawable="@drawable/baseline_code_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ifscCode"
                    android:layout_width="match_parent"
                    android:maxLength="18"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bank_name"
                android:layout_marginTop="15dp"
                app:boxStrokeColor="@color/resend_text_color"
                app:boxStrokeWidth="1dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                android:textColorHint="@color/black"
                app:startIconDrawable="@drawable/baseline_business_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bankName"
                    android:layout_width="match_parent"
                    android:maxLength="18"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/branch_address"
                android:layout_marginTop="15dp"
                app:boxStrokeColor="@color/resend_text_color"
                app:boxStrokeWidth="1dp"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                android:textColorHint="@color/black"
                app:startIconDrawable="@drawable/baseline_location_on_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/branchAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="#071BA4"
                android:onClick="submitBankDetails"
                android:text="Submit"
                app:cornerRadius="20dp"
                app:strokeColor="#ffFFE3BB"
                app:strokeWidth="2dp"
                android:paddingVertical="12dp"
                android:textAllCaps="false"
                android:textColor="@color/logInInputTextColor"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:indeterminateTint="@color/orange_color"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>