<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameProceedActivity.GameProceedActivity">
    <include layout="@layout/custom_appbar8"
        android:id="@+id/appbarLayout"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dataConText"
        android:text="@string/you_are_not_connected_to_internet"
        android:textColor="@color/white"
        android:background="@color/warningRed"
        android:padding="5dp"
        android:visibility="gone"
        android:elevation="1dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/ll_bid"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp">
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:id="@+id/pointIcon"
                    android:src="@drawable/diamond"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/walletAmount"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/pointIcon"
                    app:layout_constraintBottom_toBottomOf="@id/pointIcon"
                    app:layout_constraintStart_toEndOf="@id/pointIcon"
                    app:layout_constraintBottom_toTopOf="@id/text1"
                    android:text="00"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:id="@+id/walletAmount"
                    android:layout_marginStart="20dp"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/walletAmount"
                    app:layout_constraintBottom_toBottomOf="@id/pointIcon"
                    app:layout_constraintStart_toEndOf="@id/pointIcon"
                    android:text="Available Points"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:id="@+id/text1"
                    android:layout_marginStart="20dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/chooseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border2"
                android:paddingHorizontal="10dp"
                android:paddingVertical="13dp"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="18sp"
                android:text="rdxcfvhjhgjh"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/black"/>
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/border2"
                android:layout_marginHorizontal="20dp">
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open"
                    app:buttonTint="@color/black"
                    android:textColor="@color/black"
                    android:layout_weight="1"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/close"
                    app:buttonTint="@color/black"
                    android:textColor="@color/black"
                    android:layout_weight="1"/>
            </RadioGroup>


            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/inputDigit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_digits"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="15dp"
                android:paddingVertical="12dp"
                android:textColor="@color/black"
                android:background="@drawable/border2"
                android:inputType="number"
                android:layout_marginHorizontal="20dp"/>
            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/inputCloseDigit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_digits"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="12dp"
                android:textColor="@color/black"
                android:inputType="number"
                android:background="@drawable/rounded_corner_white"
                android:layout_marginHorizontal="20dp"
                android:visibility="gone"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Amount"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:paddingVertical="12dp"
                android:inputType="number"
                android:maxLength="9"
                android:background="@drawable/border2"
                android:textColor="@color/black"
                android:layout_marginHorizontal="20dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_proceed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#ff051367"
                app:cornerRadius="20dp"
                app:strokeColor="#ffFFE3BB"
                app:strokeWidth="2dp"
                android:text="Add Bid"
                android:paddingVertical="12dp"
                android:textAllCaps="true"
                android:textColor="#ffFFE3BB"
                android:textSize="16sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_bid"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="10dp"
                    android:nestedScrollingEnabled="false"
                    tools:listitem="@layout/recy_layout_game_proceed" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


        <LinearLayout
            android:id="@+id/ll_bid_bottom"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:visibility="gone"
            android:background="@color/toolbarColor">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_totalPoints"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_corner_white"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingStart="10dp"
                android:text="Total Points\n00"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/proceedConform"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="10dp"
                android:text="@string/proceed"
                app:cornerRadius="20dp"
                android:textColor="@color/black"
                app:backgroundTint="@color/orange_color"
                android:gravity="center"/>
        </LinearLayout>
        <include layout="@layout/custom_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
</LinearLayout>